src/test/resources/templates/invalid/no-such-template-class.kool
object Program4 {
  def/**/main () : Unit = {
    println(new Test<Int, String, String>());
  }
}

class Test2<T1, T2> { }

    